force-app/main/default/objects/Opportunity/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <description>Account Level ID for the opportunity record</description>
    <formula>AccountId</formula>
    <inlineHelpText>This is being used to bring the Account ID field to the opportunity record for reporting.</inlineHelpText>
    <label>Account ID</label>
    <type>Text</type>
</CustomField>