force-app/main/default/objects/Opportunity/fields/Additional_Spend_Growth__c.field-meta.xml
<CustomField>
    <fullName>Additional_Spend_Growth__c</fullName>
    <label>Additional Spend Growth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>