force-app/main/default/objects/Opportunity/fields/Addtl_Reason_Lost_Information__c.field-meta.xml
<CustomField>
    <fullName>Addtl_Reason_Lost_Information__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Addtl Reason Lost Information</label>
    <type>TextArea</type>
</CustomField>