force-app/main/default/objects/Opportunity/fields/Annual_Fee_Income__c.field-meta.xml
<CustomField>
    <fullName>Annual_Fee_Income__c</fullName>
    <label>Annual Fee Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>