force-app/main/default/objects/Opportunity/fields/Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue__c</fullName>
    <inlineHelpText>This field should be used for annualized revenue ONLY.</inlineHelpText>
    <label>Annual Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>