force-app/main/default/objects/Opportunity/fields/Annual_Spend_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Spend_Revenue__c</fullName>
    <formula>IF( 
NOT( ISPICKVAL( P_Card_Type__c , &quot;Growth&quot;)) , Annual_Spend__c *0.013, Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Spend Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>