force-app/main/default/objects/Opportunity/fields/AP_Software_Type__c.field-meta.xml
<CustomField>
    <fullName>AP_Software_Type__c</fullName>
    <inlineHelpText>If Other, insert name in field below.</inlineHelpText>
    <label>AP Software Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Microsoft Dynamics GP</fullName>
            </value>
            <value>
                <fullName>NetSuite</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Quickbooks</fullName>
            </value>
            <value>
                <fullName>Sage 100, 200 or 300 CRE</fullName>
            </value>
            <value>
                <fullName>Sage 50</fullName>
            </value>
            <value>
                <fullName>Sage Intacct</fullName>
            </value>
            <value>
                <fullName>SAP Business One</fullName>
            </value>
            <value>
                <fullName>Yardi</fullName>
            </value>
            <value>
                <fullName>Caliber</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>