force-app/main/default/objects/Opportunity/fields/Assets_under_Managment__c.field-meta.xml
<CustomField>
    <fullName>Assets_under_Managment__c</fullName>
    <inlineHelpText>This field is where one inputs the Assets under Managment ONLY</inlineHelpText>
    <label>Assets under Management</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>