force-app/main/default/objects/Opportunity/fields/Branding__c.field-meta.xml
<CustomField>
    <fullName>Branding__c</fullName>
    <label>Branding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FNBO</fullName>
            </value>
            <value>
                <fullName>MOGI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>