force-app/main/default/objects/Opportunity/fields/Business_Channel__c.field-meta.xml
<CustomField>
    <fullName>Business_Channel__c</fullName>
    <defaultValue>&quot;Retail&quot;</defaultValue>
    <label>Business Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail</fullName>
                <default>true</default>
                <label>Retail</label>
            </value>
            <value>
                <fullName>Consumer Direct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>