force-app/main/default/objects/Opportunity/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ag Business</fullName>
            </value>
            <value>
                <fullName>Commercial Real Estate</fullName>
            </value>
            <value>
                <fullName>Community Banking</fullName>
            </value>
            <value>
                <fullName>Corporate Lending</fullName>
            </value>
            <value>
                <fullName>Corporate Treasury Services</fullName>
            </value>
            <value>
                <fullName>Correspondent Banking</fullName>
            </value>
            <value>
                <fullName>FBC Commercial Card</fullName>
            </value>
            <value>
                <fullName>FBC FI/CoBrand</fullName>
            </value>
            <value>
                <fullName>FNTS</fullName>
            </value>
            <value>
                <fullName>Investment &amp; Planning</fullName>
            </value>
            <value>
                <fullName>KS</fullName>
            </value>
            <value>
                <fullName>Wealth Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>