force-app/main/default/objects/Opportunity/fields/Card_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Card_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Card Opportunity</label>
    <type>Checkbox</type>
</CustomField>