force-app/main/default/objects/Opportunity/fields/CBG_Balance_Type__c.field-meta.xml
<CustomField>
    <fullName>CBG_Balance_Type__c</fullName>
    <formula>IF( PLNDR__FS_Loan_Net_Commitment__c = PLNDR__FS_Loan_Commitment__c , &quot;New&quot;, if(PLNDR__FS_Loan_Net_Commitment__c &lt;&gt;0,&quot;Extended&quot;,&quot;Renewed&quot;))</formula>
    <label>CBG Balance Type</label>
    <type>Text</type>
</CustomField>