force-app/main/default/objects/Opportunity/fields/Close_Year__c.field-meta.xml
<CustomField>
    <fullName>Close_Year__c</fullName>
    <formula>TEXT(YEAR(CloseDate))</formula>
    <label>Close Year</label>
    <type>Text</type>
</CustomField>