force-app/main/default/objects/Opportunity/fields/Closed_Won_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Reason__c</fullName>
    <label>Closed Won Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Guarantee</fullName>
            </value>
            <value>
                <fullName>Cash Secured Account</fullName>
            </value>
            <value>
                <fullName>FNBO Underwriting</fullName>
            </value>
            <value>
                <fullName>Personal Guarantee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>