force-app/main/default/objects/Opportunity/fields/Comments_from_Referral__c.field-meta.xml
<CustomField>
    <fullName>Comments_from_Referral__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comments from Referral</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>