force-app/main/default/objects/Opportunity/fields/Competitor_s__c.field-meta.xml
<CustomField>
    <fullName>Competitor_s__c</fullName>
    <label>Competitor(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Business_Unit__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1st Farm Credit</fullName>
            </value>
            <value>
                <fullName>ADS</fullName>
            </value>
            <value>
                <fullName>AgStar</fullName>
            </value>
            <value>
                <fullName>American National</fullName>
            </value>
            <value>
                <fullName>Ameritas</fullName>
            </value>
            <value>
                <fullName>Amex</fullName>
            </value>
            <value>
                <fullName>Baker Group</fullName>
            </value>
            <value>
                <fullName>Bankers Bank of the West</fullName>
            </value>
            <value>
                <fullName>Bankers Bank Wisconsin</fullName>
            </value>
            <value>
                <fullName>Bank Midwest</fullName>
            </value>
            <value>
                <fullName>Bank of America</fullName>
            </value>
            <value>
                <fullName>Bank of Arizona</fullName>
            </value>
            <value>
                <fullName>Bank of Oklahoma</fullName>
            </value>
            <value>
                <fullName>Bank of the West</fullName>
            </value>
            <value>
                <fullName>Bank View</fullName>
            </value>
            <value>
                <fullName>Barclays</fullName>
            </value>
            <value>
                <fullName>BBVA Compass</fullName>
            </value>
            <value>
                <fullName>BMO Harris Bank</fullName>
            </value>
            <value>
                <fullName>Bridges Investment Counsel</fullName>
            </value>
            <value>
                <fullName>BSW Partners</fullName>
            </value>
            <value>
                <fullName>Cambridge Advisors</fullName>
            </value>
            <value>
                <fullName>Cap One</fullName>
            </value>
            <value>
                <fullName>Carson Wealth Management</fullName>
            </value>
            <value>
                <fullName>Chase</fullName>
            </value>
            <value>
                <fullName>Citi</fullName>
            </value>
            <value>
                <fullName>City National</fullName>
            </value>
            <value>
                <fullName>Co-Bank</fullName>
            </value>
            <value>
                <fullName>Colorado Financial Management</fullName>
            </value>
            <value>
                <fullName>Comdata</fullName>
            </value>
            <value>
                <fullName>Comerica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>