force-app/main/default/objects/Opportunity/fields/Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term__c</fullName>
    <inlineHelpText>This will be the number of months the contract is valid before renewal is required</inlineHelpText>
    <label>Contract Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>