force-app/main/default/objects/Opportunity/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <description>Created Date without Time</description>
    <formula>CreatedDate</formula>
    <label>CreatedDate</label>
    <type>Date</type>
</CustomField>