force-app/main/default/objects/Opportunity/fields/Credit_Decision_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Decision_Approved_Date__c</fullName>
    <description>Date credit decision was approved for CBG credits - Input from Marlene Lenhardt</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Credit Decision Approved Date</label>
    <type>Date</type>
</CustomField>