force-app/main/default/objects/Opportunity/fields/CTS_Group__c.field-meta.xml
<CustomField>
    <fullName>CTS_Group__c</fullName>
    <label>CTS Groups</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Footprint</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>