force-app/main/default/objects/Opportunity/fields/Current_Appraisal_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Appraisal_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Appraisal Date</label>
    <type>Date</type>
</CustomField>