force-app/main/default/objects/Opportunity/fields/Current_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Current_Interest_Rate__c</fullName>
    <label>Current Interest Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>