force-app/main/default/objects/Opportunity/fields/Current_LTV__c.field-meta.xml
<CustomField>
    <fullName>Current_LTV__c</fullName>
    <label>Current LTV</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>