force-app/main/default/objects/Opportunity/fields/Current_NMLS__c.field-meta.xml
<CustomField>
    <fullName>Current_NMLS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current NMLS</label>
    <length>12</length>
    <type>Text</type>
</CustomField>