force-app/main/default/objects/Opportunity/fields/CY_Projected_After_Tax_Net_Income__c.field-meta.xml
<CustomField>
    <fullName>CY_Projected_After_Tax_Net_Income__c</fullName>
    <description>Field Used to Project Pipeline Net Income for Current Year</description>
    <formula>( PLNDR__FS_Net_Income__c  / 365*(DATE(YEAR( TODAY() ) ,12,31)- TODAY() )) *  Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CY Projected After-Tax Net Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>