force-app/main/default/objects/Opportunity/fields/Deal_Status__c.field-meta.xml
<CustomField>
    <fullName>Deal_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deal Status</label>
    <type>TextArea</type>
</CustomField>