force-app/main/default/objects/Opportunity/fields/Deposits__c.field-meta.xml
<CustomField>
    <fullName>Deposits__c</fullName>
    <inlineHelpText>This is where one would enter new or additional DDA/CMMDA Deposits</inlineHelpText>
    <label>Deposits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>