force-app/main/default/objects/Opportunity/fields/Empower_ID__c.field-meta.xml
<CustomField>
    <fullName>Empower_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Empower ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>