force-app/main/default/objects/Opportunity/fields/Escrow_Payment_Amt__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Payment_Amt__c</fullName>
    <label>Escrow Payment Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>