force-app/main/default/objects/Opportunity/fields/Estimated_Number_of_Cards__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Number_of_Cards__c</fullName>
    <label>Estimated Number of Cards</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>