force-app/main/default/objects/Opportunity/fields/Existing_Contract__c.field-meta.xml
<CustomField>
    <fullName>Existing_Contract__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Existing Contract</label>
    <type>Date</type>
</CustomField>