force-app/main/default/objects/Opportunity/fields/Expected_Days_Until_Close__c.field-meta.xml
<CustomField>
    <fullName>Expected_Days_Until_Close__c</fullName>
    <formula>CloseDate - Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>