force-app/main/default/objects/Opportunity/fields/Expected_Implementation_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Implementation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Expected Go-live date</inlineHelpText>
    <label>Expected Implementation Date</label>
    <type>Date</type>
</CustomField>