force-app/main/default/objects/Opportunity/fields/FIN_PLAN_Invoice_or_Exception__c.field-meta.xml
<CustomField>
    <fullName>FIN_PLAN_Invoice_or_Exception__c</fullName>
    <inlineHelpText>Indicate whether client is paying us for financial planning services or if an employee has requested an exception.</inlineHelpText>
    <label>FIN PLAN - Invoice or Exception</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exception</fullName>
            </value>
            <value>
                <fullName>Paid - Fee or Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>