force-app/main/default/objects/Opportunity/fields/FINPLAN_Delivered_Date__c.field-meta.xml
<CustomField>
    <fullName>FINPLAN_Delivered_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FINPLAN Delivered Date</label>
    <type>Date</type>
</CustomField>