force-app/main/default/objects/Opportunity/fields/FINPLAN_Delivery_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>FINPLAN_Delivery_Receipt_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date plan was presented to client.</inlineHelpText>
    <label>FINPLAN Completed Date</label>
    <type>Date</type>
</CustomField>