force-app/main/default/objects/Opportunity/fields/FINPLAN_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>FINPLAN_Due_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Extended completion date, if applicable.</inlineHelpText>
    <label>FINPLAN Extended Due Date</label>
    <type>Date</type>
</CustomField>