force-app/main/default/objects/Opportunity/fields/FINPLAN_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>FINPLAN_Invoice_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Initial estimated completion date.</inlineHelpText>
    <label>FINPLAN Due Date</label>
    <type>Date</type>
</CustomField>