force-app/main/default/objects/Opportunity/fields/FINPLAN_Plan_Stage__c.field-meta.xml
<CustomField>
    <fullName>FINPLAN_Plan_Stage__c</fullName>
    <label>FINPLAN - Plan Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closed - Plan Updated</fullName>
                <label>Closed - Plan Updated (Existing Client)</label>
            </value>
            <value>
                <fullName>Closed - Plan Delivered</fullName>
                <label>Closed - Plan Delivered (New Client)</label>
            </value>
            <value>
                <fullName>Plan Completed - Ready for Delivery</fullName>
            </value>
            <value>
                <fullName>Plan Analysis</fullName>
            </value>
            <value>
                <fullName>Pending Additional Data</fullName>
            </value>
            <value>
                <fullName>Initial Data Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>