force-app/main/default/objects/Opportunity/fields/FINPLAN_Service_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>FINPLAN_Service_Agreement_Date__c</fullName>
    <description>The date we signed an agreement to provide Financial Planning Serivces.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date the signed agreement and documents were presented to Financial Planning.</inlineHelpText>
    <label>FINPLAN Start Date</label>
    <type>Date</type>
</CustomField>