force-app/main/default/objects/Opportunity/fields/Flood_Insurance_Amt__c.field-meta.xml
<CustomField>
    <fullName>Flood_Insurance_Amt__c</fullName>
    <label>Flood Insurance Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>