force-app/main/default/objects/Opportunity/fields/Footprint__c.field-meta.xml
<CustomField>
    <fullName>Footprint__c</fullName>
    <label>Footprint</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>