force-app/main/default/objects/Opportunity/fields/FTP__c.field-meta.xml
<CustomField>
    <fullName>FTP__c</fullName>
    <description>Used to track cost of funds for Washington County Bank</description>
    <inlineHelpText>Please find from Treasury funding sheet and update at close</inlineHelpText>
    <label>FTP (%)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>