force-app/main/default/objects/Opportunity/fields/Growth_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Growth_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Growth Opportunity</label>
    <type>Checkbox</type>
</CustomField>