force-app/main/default/objects/Opportunity/fields/I_am_Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>I_am_Opportunity_Owner__c</fullName>
    <formula>Opportunity_Owner_ID__c = $User.Id</formula>
    <label>I am Opportunity Owner</label>
    <type>Checkbox</type>
</CustomField>