force-app/main/default/objects/Opportunity/fields/I_P_New_Core_Acct__c.field-meta.xml
<CustomField>
    <fullName>I_P_New_Core_Acct__c</fullName>
    <description>Select if the closing of this opportunity will bring a new &quot;core&quot; account into the I&amp;P team.</description>
    <label>I&amp;P New Core Acct?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>