force-app/main/default/objects/Opportunity/fields/I_P_New_Mg_Assets__c.field-meta.xml
<CustomField>
    <fullName>I_P_New_Mg_Assets__c</fullName>
    <label>I&amp;P Managed Assets?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>