force-app/main/default/objects/Opportunity/fields/I_P_New_or_Existing_Assets__c.field-meta.xml
<CustomField>
    <fullName>I_P_New_or_Existing_Assets__c</fullName>
    <label>I&amp;P New or Existing Assets?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>