force-app/main/default/objects/Opportunity/fields/Int_Rate__c.field-meta.xml
<CustomField>
    <fullName>Int_Rate__c</fullName>
    <description>Interest Rate tracked for Washington County Bank</description>
    <label>Int Rate (%)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>