force-app/main/default/objects/Opportunity/fields/Interest_Rate_Adjustment_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Adjustment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interest Rate Adjustment Date</label>
    <type>Date</type>
</CustomField>