force-app/main/default/objects/Opportunity/fields/Is_DDA__c.field-meta.xml
<CustomField>
    <fullName>Is_DDA__c</fullName>
    <formula>if( PLNDR__FS_Loan_Commitment__c = 0, &quot;True&quot;, &quot;False&quot;)</formula>
    <label>Is DDA</label>
    <type>Text</type>
</CustomField>