force-app/main/default/objects/Opportunity/fields/Is_this_a_Financial_Planning_Client__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_Financial_Planning_Client__c</fullName>
    <inlineHelpText>Is this a Financial Plan client at FNB?</inlineHelpText>
    <label>Is this a Financial Planning Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>