force-app/main/default/objects/Opportunity/fields/isoSourceDunsNumber__c.field-meta.xml
<CustomField>
    <fullName>isoSourceDunsNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>isoSourceDunsNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>