force-app/main/default/objects/Opportunity/fields/isoSourceRecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>isoSourceRecordTypeId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>isoSourceRecordTypeId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>