force-app/main/default/objects/Opportunity/fields/Lead_Source_COI__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_COI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>COI Source</label>
    <referenceTo>COI__c</referenceTo>
    <relationshipLabel>Related Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>