force-app/main/default/objects/Opportunity/fields/lead_source_name__c.field-meta.xml
<CustomField>
    <fullName>lead_source_name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please type first and last name (ONLY) of the referral source.</inlineHelpText>
    <label>Lead Source Name</label>
    <type>TextArea</type>
</CustomField>