force-app/main/default/objects/Opportunity/fields/Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount__c</fullName>
    <inlineHelpText>This field is for Loan Amount and Line of Credit ONLY</inlineHelpText>
    <label>Loan Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>