force-app/main/default/objects/Opportunity/fields/Loan_Amount_Won__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount_Won__c</fullName>
    <formula>IF( of_Closed_Won__c=1,  Loan_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Amount Won</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>