force-app/main/default/objects/Opportunity/fields/Loan_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Loan_Commitment__c</fullName>
    <formula>TEXT(PLNDR__FS_Loan_Commitment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Commitment</label>
    <type>Text</type>
</CustomField>