force-app/main/default/objects/Opportunity/fields/Loan_Source__c.field-meta.xml
<CustomField>
    <fullName>Loan_Source__c</fullName>
    <label>Loan Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web Inquiry</fullName>
            </value>
            <value>
                <fullName>Inbound Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>