force-app/main/default/objects/Opportunity/fields/Loan_Spread__c.field-meta.xml
<CustomField>
    <fullName>Loan_Spread__c</fullName>
    <description>FTP Spread calculated for Washington County Bank</description>
    <formula>Int_Rate__c - FTP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Spread (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>