force-app/main/default/objects/Opportunity/fields/Loan_Spread_Dollars__c.field-meta.xml
<CustomField>
    <fullName>Loan_Spread_Dollars__c</fullName>
    <description>FTP Spread Dollars calculated for Washington County Bank</description>
    <formula>Loan_Spread__c * Loan_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Spread ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>