force-app/main/default/objects/Opportunity/fields/Loan_Status__c.field-meta.xml
<CustomField>
    <fullName>Loan_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Loan Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>