force-app/main/default/objects/Opportunity/fields/Loan_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Status_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Loan Status Date</label>
    <type>Date</type>
</CustomField>