force-app/main/default/objects/Opportunity/fields/Loan_Type_1__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Loan Type 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>