force-app/main/default/objects/Opportunity/fields/Monthly_Close_Status__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Close_Status__c</fullName>
    <label>Monthly Close Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cnvrsn</fullName>
            </value>
            <value>
                <fullName>Might</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Should</fullName>
            </value>
            <value>
                <fullName>Will</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>