force-app/main/default/objects/Opportunity/fields/Mortgag_Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Mortgag_Insurance_Company__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mortgage Insurance Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>