force-app/main/default/objects/Opportunity/fields/Mortgage_Insurance_Amt__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Insurance_Amt__c</fullName>
    <label>Mortgage Insurance Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>